got dragdrop working with browserify

--- a/public/stylesheets/s3DragUp.css
+++ b/public/stylesheets/s3DragUp.css
@@ -3,3 +3,12 @@
 	font-size: 16px;
 	font-family: Muli;
 }
+.hover {
+  border: 2px solid red !important;}
+.dragDropControlContainer {
+  margin-left: 2px;
+  width: 304px;
+  height: 304px;
+  border: gainsboro 4px dashed;
+  cursor: pointer;
+  float: left;}
