--- a/views/s3DragUp.jade
+++ b/views/s3DragUp.jade
@@ -1,5 +1,7 @@
 extends layout 
 block content
 	.s3DragUpContainer
+	.dragDropControlContainer
+		img#dropImage
 	script
-		initializeModule();
+		ready();
